--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "Error Handling"
   ],
   "author": "Salient Systems Corporation",
-  "license": "MIT",
+  "license": "GNU GPLv3",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "~5.43.0",
     "@typescript-eslint/parser": "~5.43.0",
