--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "lint": "eslint src/**",
     "lint-fix": "eslint src/** --fix",
-    "wt": "tsc -w"
+    "wt": "tsc -w",
+    "patch-publish": "npm version patch && npm publish"
   },
   "files": [
     "/dist",
