--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/**",
     "lint-fix": "eslint src/** --fix",
     "wt": "tsc -w",
-    "pre-release": "npm run build && npm version prerelease & npm publish"
+    "pre-release": "npm run build && npm version prerelease && npm publish"
   },
   "files": [
     "/dist",
