--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.16",
+  "version": "1.0.17",
   "name": "@salient-sys/scs-errors",
   "description": "Standardized and documented error handling for Salient Cloud Services",
   "main": "dist/index.js",
@@ -8,7 +8,7 @@
     "lint": "eslint src/**",
     "lint-fix": "eslint src/** --fix",
     "wt": "tsc -w",
-    "patch-publish": "npm run build && npm version patch && npm publish"
+    "pre-release": "npm run build && npm version prerelease && npm publish"
   },
   "files": [
     "/dist",
