--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src/**",
     "lint-fix": "eslint src/** --fix",
     "wt": "tsc -w",
-    "pre-release": "npm run build && npm version prerelease && npm publish"
+    "pre-release": "npm run build && npm version prerelease && npm publish",
+    "release": "npm run build && npm version patch && npm publish"
   },
   "files": [
     "/dist",
